# alphalens_plus

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LOGGING.md  READMD.md  README.md  add_req_to_setup.py  pyproject.toml  requirements.txt  setup.py  utils.py
.git-crypt/: filter.py
.github/workflows/: release.yml
alphalens_plus/: __init__.py  logging.py  opt.py  performance.py  plotting.py  tears.py  utils.py
tests/: main_opt_hperiod.py  only_long_strat.py  test_alphalens.py  test_alphalens_plus.py  test_import.py  test_stats.py  test_utils.py  test_version.py
tests/alphalens_plus/: test_alphalens.py  test_alphalens_plus.py
tests/empyrical/: test_empyrical.py  test_stats.py
