[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsf-alphalens"
version = "1.0.2"
description = "Alpha analysis tools box"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "msliu98", email = "mingshuoliu98@163.com"},
]
requires-python = ">=3.9.12"
dependencies = [
    "loguru",
    "six",
    "statsmodels",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas==1.3.5",
    "numpy==1.21.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
opt = ["cvxpy"]

[tool.setuptools]
packages = ["alphalens_plus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
